TreeAnalysis/Plot/Temp5/SR_sig+irred_bkg_tot.txt
TH1F::Add:0: RuntimeWarning: Attempt to add histograms with different axis limits
Info in <TCanvas::Print>: file Stack_SR_sig+irred_bkg_tot.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_SR_sig+irred_bkg_tot.root has been created

######### Contribution to fake rate #########

DoubleMu .......................... 3.23906214756
DoubleEle .......................... 2.72710876539
MuEG .......................... 0.0563635145081
                                __________________ 

Reducible background---------->  6.02253441082 

For sample  ZZTo4eJJ_SMHContinInterf_H125.6 h2e2mu has no enetries or is a zombie
For sample  ZZTo4e h2e2mu has no enetries or is a zombie
For sample  ggTo4e_SMHContinInterf-MCFM67_H125.6 h2e2mu has no enetries or is a zombie
For sample  ggTo4mu_SMHContinInterf-MCFM67_H125.6 h2e2mu has no enetries or is a zombie
For sample  WH126 h2e2mu has no enetries or is a zombie
For sample  ZH126 h2e2mu has no enetries or is a zombie
For sample  ZZTo2e2mu h4e has no enetries or is a zombie
For sample  ZZTo2e2muJJ_SMHContinInterf_H125.6 h4e has no enetries or is a zombie
For sample  ZZTo4mu h4e has no enetries or is a zombie
For sample  ZZTo4muJJ_SMHContinInterf_H125.6 h4e has no enetries or is a zombie
For sample  ggTo2e2mu_SMHContinInterf-MCFM67_H125.6 h4e has no enetries or is a zombie
For sample  ggTo4mu_SMHContinInterf-MCFM67_H125.6 h4e has no enetries or is a zombie
For sample  WH126 h4e has no enetries or is a zombie
For sample  ZH126 h4e has no enetries or is a zombie
For sample  ZZTo2e2mu h4mu has no enetries or is a zombie
For sample  ZZTo2e2muJJ_SMHContinInterf_H125.6 h4mu has no enetries or is a zombie
For sample  ZZTo4eJJ_SMHContinInterf_H125.6 h4mu has no enetries or is a zombie
For sample  ZZTo4e h4mu has no enetries or is a zombie
For sample  ggTo2e2mu_SMHContinInterf-MCFM67_H125.6 h4mu has no enetries or is a zombie
For sample  ggTo4e_SMHContinInterf-MCFM67_H125.6 h4mu has no enetries or is a zombie
For sample  WH126 h4mu has no enetries or is a zombie
For sample  ZH126 h4mu has no enetries or is a zombie

Total integral 2e2mu contribution ---------->  127.861183412

Total integral 4e    contribution ---------->  52.184738467

Total integral 4mu   contribution ---------->  75.6870443559 

TTWWJets .......................... 0.0043484694387
TTZJets .......................... 1.58860274195

######### Contribution to fake rate #########

DoubleMu .......................... 3.23906214756
DoubleEle .......................... 2.72710876539
MuEG .......................... 0.0563635145081
                                __________________ 

Reducible background---------->  6.02253441082 


######### Signal samples for every final state #########


######### Data #########

DoubleMu .......................... 108.0
DoubleEle .......................... 179.0
MuEG .......................... 1.0
DoubleMu INTEGRAL HVAR =  1.0 N BINS 200
DoubleEle INTEGRAL HVAR =  1.0 N BINS 200
MuEG INTEGRAL HVAR =  1.0 N BINS 200
TOTAL  1584.0
digit anything you want to end the script 
Traceback (most recent call last):
  File "./scriptStack.py", line 46, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
